# mr

./: Makefile  go.mod  go.sum
go/: .gitignore
go/main/: mrcoordinator.go  mrworker.go  run.sh
go/mr/: coordinator.go  rpc.pb.go  rpc_grpc.pb.go  worker.go
go/mrapps/: wc.go
proto/: rpc.proto
rust/: .gitignore  Cargo.toml  run.sh
rust/mr/: Cargo.toml  build.rs
rust/mr-apps/wc/: Cargo.toml
rust/mr-apps/wc/src/: lib.rs
rust/mr-types/: Cargo.toml
rust/mr-types/src/: lib.rs
rust/mr/src/: lib.rs
rust/mr/src/main/: mrcoordinator.rs  mrworker.rs
rust/mr/src/mr/: coordinator.rs  mod.rs  worker.rs
rust/mr/src/mrapps/: wc.rs
