[package]
name = "mr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mr-worker"
path = "src/main/mrworker.rs"

[[bin]]
name = "mr-coordinator"
path = "src/main/mrcoordinator.rs"

[dependencies]
bytes = "1.4.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tonic = { version = "0.9.2", features = ["codegen"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
futures-core = "0.3.28"
futures-util = "0.3.28"
prost = "0.11.9"
libloading = "0.8.0"

[build-dependencies]
tonic-build = "0.9"
